# crm-digital-fte-factory

./: .gitignore  .mcp.json  HACKATHON_STATUS_REPORT.md  README.md  checklist.local.md  docker-compose.yml  test.md
archived/backend/: .env.example  pyproject.toml
archived/backend/src/: main.py  settings.py
archived/backend/src/channels/: channel_handler.py
archived/backend/src/database/: session_factory.py
archived/backend/src/web-form/: index.html
archived/backend/tests/api/: test_integration.py  test_sample_tickets.py
backend/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  refresh_gmail_token.py
backend/alembic/: README  env.py
backend/alembic/versions/: 459bcf301ab0_initial_schema_with_all_8_tables_and_.py  88a525cdab36_add_gmail_watch_state_table.py  95e2e592fcaa_add_channel_integration_support.py  a7a1ebba7aa8_refactor_agent_metrics_add_observability.py
backend/scripts/: generate_gmail_credentials.py  migrate_knowledge_base.py  register_gmail_watch.py  renew_gmail_watch.py
backend/src/: config.py  main.py  settings.py
backend/src/agent/: __init__.py  context.py  customer_success_agent.py  formatters.py  hooks.py  prompts.py  session.py
backend/src/agent/core/: agents.py  mcp.py  runner.py
backend/src/api/: __init__.py  customers.py  openapi.yaml
backend/src/channels/: __init__.py  base.py  channel_handler.py  email_parser.py  gmail_client.py  gmail_handler.py  twilio_client.py  web_form_handler.py  whatsapp_handler.py
backend/src/database/: __init__.py  connection.py  models.py  session_factory.py
backend/src/kafka/: producer.py  schemas.py  topics.py
backend/src/middleware/: correlation_id.py  error_handling.py
backend/src/monitoring/: kafka_lag_monitor.py  prometheus_metrics.py
backend/src/services/: attachment_service.py  conversation_service.py  customer_identification.py  kafka_consumer_service.py  notification_service.py
backend/src/utils/: hmac_validator.py  rate_limiter.py  retry.py
backend/src/web-form/: index.html
backend/src/workers/: __init__.py  message_processor.py
backend/tests/: conftest.py  test_whatsapp_handler.py  test_whatsapp_webhook.py
backend/tests/api/: test_integration.py  test_mcp_integration.py  test_sample_tickets.py
backend/tests/e2e/: README_GMAIL_E2E.md  conftest.py  test_gmail_real_flow.py  test_multichannel_flow.py  test_whatsapp_real_flow.py
backend/tests/helpers/: __init__.py  gmail_test_helper.py  webhook_trigger.py  whatsapp_test_helper.py
backend/tests/integration/: conftest.py  test_agent_workflow.py  test_api_endpoints.py  test_attachments.py  test_cross_channel.py  test_customer_identification.py  test_database_crud.py  test_gmail_webhook.py  test_helpers.py  test_knowledge_migration.py  test_session_persistence.py  test_tools.py  test_web_form_endpoints.py  test_web_form_kafka.py
backend/tests/unit/: conftest.py  test_agent_tools.py  test_base_handler.py  test_conversation_queries.py  test_customer_queries.py  test_email_parser.py  test_formatters.py  test_hmac_validator.py  test_hooks_logic.py  test_kafka_producer.py  test_knowledge_base_queries.py  test_message_queries.py  test_prompts.py  test_rate_limiter.py  test_retry.py  test_schemas.py  test_session_logic.py  test_ticket_queries.py
mcp-server/: .env.example  .gitignore  README.md  pyproject.toml
mcp-server/context/: brand-voice.md  company-profile.md  escalation-rules.md  product-docs.md  sample-tickets.json
mcp-server/docs/: database-config.md
mcp-server/replies/: reply_TKT-189_20260223_072404.txt  reply_TKT-192_20260223_072405.txt  reply_TKT-193_20260223_072405.txt  reply_TKT-202_20260223_072405.txt  reply_TKT-209_20260223_072406.txt  reply_TKT-212_20260223_082952.txt
mcp-server/src/: config.py  main.py
mcp-server/src/database/: models.py  session.py
mcp-server/src/storage/: __init__.py  file_storage.py
mcp-server/src/tools/: analyze_sentiment.py  create_ticket.py  crm_tools.py  escalate_to_human.py  get_customer_history.py  identify_customer.py  search_knowledge_base.py  send_response.py
mcp-server/src/utils/: embeddings.py  metrics.py  rate_limiter.py  security.py
mcp-server/tests/: conftest.py  test_customer_identification.py
mcp-server/tests/integration/: test_integration.py
mcp-server/tests/unit/: test_health.py  test_mcp_server.py  test_metrics.py  test_rate_limiter.py  test_security.py  test_tools.py
(+335 files in other folders)
