[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Syeda Hoorain Ali", email = "syedahoorainali8@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai-agents[sqlalchemy]>=0.8.1",
    "python-dotenv>=1.2.1",
]

[project.scripts]
main = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
