[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
    "fastmcp>=1.0.0",
    "sqlmodel>=0.0.32",
]

[project.scripts]
mcp-server = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "inline-snapshot>=0.31.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

