[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
    "fastmcp>=1.0.0",
    "vadersentiment>=3.3.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
]

[project.scripts]
mcp-server = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "inline-snapshot>=0.31.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

