[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Syeda Hoorain Ali", email = "syedahoorainali8@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "openai-agents[sqlalchemy]>=0.8.1",
    "python-dotenv>=1.2.1",
]

[project.scripts]
main = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
